# pep_xxx_wheel_variants

./: .gitignore  .gitmodules  DEMO.md  ENGINEERING.md  README.md  gg.py  hh.py  pyproject.toml  setup.py  update_all_submodules.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  hourly_repo_update.yml
docs/: prior-art.md
docs/design/: base_definitions.md  metadata.md  pep517_config_settings.md  plugin_api.md  variants.json.md
docs/narratives/: build_backends.md
docs/tutorials/: Numpy.md  PyTorch.md  XGBoost.md  meson-python.md
dummy-project/: pyproject.toml
dummy-project-hatch/: Makefile  pyproject.toml
dummy-project-hatch/dummy_project/: __init__.py
dummy-project-meson/: Makefile  meson.build  pyproject.toml
dummy-projects-flit/dummy-project/: Makefile  pyproject.toml
dummy-projects-flit/dummy-project/dummy_project/: __init__.py
dummy-projects-flit/sandbox-project/: Makefile  pyproject.toml
dummy-projects-flit/sandbox-project/sandbox_project/: __init__.py
example-projects/abi_dependent_variants/abi_dependent/: Makefile
example-projects/example-flit/dummy-project-flit/: Makefile
example-projects/example-flit/sandbox-project-flit/: Makefile
example-projects/example-hatch/: Makefile  pyproject.toml
example-projects/example-meson/: Makefile  pyproject.toml
example-projects/exampleA-flit/: Makefile  pyproject.toml
example-projects/exampleB-flit/: Makefile  pyproject.toml
pep_xxx_wheel_variants/: Makefile  pyproject.toml
plugins/provider_fictional_hw/provider_fictional_hw/: __init__.py  plugin.py
plugins/provider_fictional_tech/provider_fictional_tech/: plugin.py
provider_example_dynamic(HW)/: gg.py  pyproject.toml
provider_example_dynamic(HW)/provider_fictional_hw/: __init__.py  plugin.py  version_sort.py
provider_example_hw/provider_fictional_hw/: plugin.py
provider_example_static(Tech)/: pyproject.toml
provider_example_static(Tech)/provider_fictional_tech/: __init__.py  plugin.py
provider_example_tech/provider_fictional_tech/: plugin.py
provider_fictional_hw/provider_fictional_hw/: __init__.py
provider_fictional_tech/: Makefile
schema/: variants.schema.json
tutorials/: Numpy.md  PyTorch.md  XGBoost.md
