[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pep-xxx-wheel-variants"
version = "1.0.0"
authors = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
dependencies = [
    "variantlib[cli] @ git+https://github.com/wheelnext/variantlib.git@main",
    "pip @ git+https://github.com/wheelnext/pip.git@pep-xxx-wheel-variants",
]
