[build-system]
requires = [ "flit_core >=3.11,<4" ]
build-backend = "flit_core.buildapi"


[project]
name = "provider-fictional-tech"
requires-python = ">=3.9"
dependencies = [ ]
dynamic = ["version", "description"]


[project.entry-points.variant_plugins]
provider_fictional_tech = "provider_fictional_tech.plugin:FictionalTechPlugin"
