[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dummy-project"
authors = [
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" },
]
dynamic = ["version", "description"]

[variant.default-priorities]
namespace = ["fictional_hw", "fictional_tech"] 
feature = {'fictional_hw' = ['humor', 'compute_accuracy'], 'fictional_tech' = ['quantum']}
property = {'fictional_tech' = {'technology' = ['auto_chef']}}

[variant.providers.fictional_tech]
requires = ["provider-fictional-tech == 1.0.0"]
plugin-api = "provider_fictional_tech.plugin:FictionalTechPlugin"

[variant.providers.fictional_hw]
requires = ["provider-fictional-hw == 1.0.0"]
enable_if = "python_version >= '3.12'"
plugin-api = "provider_fictional_hw.plugin:FictionalHWPlugin"
