[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sandbox-project"
authors = [
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" },
]
dynamic = ["version", "description"]

[variant.default-priorities]
 # the plugins corresponding to these namespaces will be auto-installed at installation
namespace = ["fictional_tech", "fictional_hw"]  # optional - if empty nothing is auto-installed
feature = []                                    # optional - Can be skipped if empty - 95%+ packages won't ever need
property = []                                   # optional - Can be skipped if empty - 95%+ packages won't ever need

[variant.providers.fictional_tech]
requires = ["provider-fictional-tech == 1.0.0"]
plugin-api = "provider_fictional_tech.plugin:FictionalTechPlugin"

[variant.providers.fictional_hw]
requires = ["provider-fictional-hw == 1.0.0"]
plugin-api = "provider_fictional_hw.plugin:FictionalHWPlugin"
