[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python @ https://github.com/mgorny/meson-python/archive/wheel-variants.tar.gz",
]

[project]
name = "dummy-project-meson"
version = "0.0.1"
requires-python = ">=3.9"

[variant.default-priorities]
namespace = ["fictional_hw", "fictional_tech"]

[variant.providers.fictional_hw]
requires = ["provider_fictional_hw @ https://github.com/wheelnext/provider_fictional_hw/archive/dev.tar.gz"]
plugin-api = "provider_fictional_hw.plugin:FictionalHWPlugin"

[variant.providers.fictional_tech]
requires = ["provider_fictional_tech @ https://github.com/wheelnext/provider_fictional_tech/archive/dev.tar.gz"]
plugin-api = "provider_fictional_tech.plugin:FictionalTechPlugin"
